cargo-features = ["edition"]

[package]
name = "d3d9-tests"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
license = "LGPL3+"
edition = "2018"

[dependencies]
comptr = { git = "https://github.com/GabrielMajeri/comptr-rs" }
winit = "0.17"

[dependencies.winapi]
version = "0.3"
features = [
    "winerror",
    "d3d9",
]
